--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/cli.min.js" integrity="sha512-RSaf/gTOktvVzq/4xHViPvFe0v5rDZ2VmayfWiaIRNoql91be1EDF/qxGD0OGAQcCwN6BIVQ47E0loyD3msWoA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./css.css">
-    <title>Hay88.com|Xóc đĩa,Nổ hũ,  Thể thao, Đá gà, Tài xỉu, Xổ số, Bắn cá</title>
+    <title>Hay88.com|Xóc đĩa, Nổ hũ, Thể thao, Đá gà, Tài xỉu, Xổ số, Bắn cá</title>
 </head>
 <body>
     <header class="bg-[#336699] sticky top-0 z-10 w-full">
@@ -181,6 +181,7 @@
                     Địa chỉ: 309 Quang Trung, Gò Vấp, Tp.HCM, Việt Nam <br>
                     Email: hay88008@gmail.com <br>
                     Số điện thoại: (+84) 925189888 <br>
+                    Website: <a href="https://www.hay8811.com/?inviteCode=1766861">https://hay88.com/</a>
                 </p>
             </ul>
         </div>
